--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-    "title":"Blog Title",
-    "subTitle":"Blog description",
-    "avatarUrl":"https://github.githubassets.com/favicons/favicon.svg",
+    "title":"老铁的碎碎念",
+    "subTitle":"自留地，科技、艺术，哲学，文学",
+    "avatarUrl":"https://avatars.githubusercontent.com/u/119055643?v=4",
     "GMEEK_VERSION":"last"
 }
